# Litminer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SKILL.md  pipeline.bat  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
config/: default.json  example.user.json  mcp.claude.example.json  mcp.codex.example.toml
engine/: dedupe_papers.py  merge_csv.py  processing_report.py  publisher_probe.py  run_lit_search.py  websearch_import.py
evals/: README.md
examples/: README.md  input.csv
litminer/: __init__.py
litminer/engine/: __init__.py  agent_summary.py  api_discovery.py  artifacts.py  bootstrap.py  build_publisher_queue.py  cache.py  common.py  dedupe_papers.py  doctor.py  journal_metrics.py  merge_csv.py  offline_smoke.py  processing_report.py  provenance.py  publisher_adapters.py  publisher_probe.py  query_plan.py  run_lit_search.py  schema.py  semantic_triage.py  source_strategy.py  status_policy.py  validate_stage.py  websearch_import.py  workflow_state.py  workspace.py
litminer/references/: __init__.py  journal_metrics_seed.csv
litminer/sources/: __init__.py
references/: agent-safety.md  agent-workflow.md  artifact-contracts.md  csv-fields.md  mcp-surface.md  quality-and-evidence.md  release-checklist.md  runtime-recovery.md  source-expansion-notes.md  user-guide.en.md  user-guide.md
sources/adapters/: arxiv.md  openalex.md  semantic-scholar.md  unpaywall.md  web-search.md
sources/api/: registry.py  (+2 more)
test/: test_input.csv  test_litminer_core.py  websearch_candidates.csv
(+25 files in other folders)
